--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: IDEAWOLF BLOG
 email: ideawolf@protonmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  <a href="https://play.google.com/store/apps/developer?id=ideawolf">
+  <a target="_blank" href="https://play.google.com/store/apps/developer?id=ideawolf">
   💡 https://play.google.com/store/apps/developer?id=ideawolf 💡
   </a>
 baseurl: "" # the subpath of your site, e.g. /blog
