--- a/_config.yml
+++ b/_config.yml
@@ -51,6 +51,15 @@ defaults:
     values:
       layout: "category"
 
+jekyll_admin:
+  hidden_links:
+    # - posts
+    # - pages
+    # - staticfiles
+    # - datafiles
+    # - configuration
+  homepage: "posts"
+  
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
